styles: fix alignment issue with icons and buttons

--- a/app/style/_dashboard.scss
+++ b/app/style/_dashboard.scss
@@ -91,7 +91,6 @@
 
 				width: 50%;
 				text-align: center;
-				min-width: 118px;
 			}
 
 			.plus-btn {
