--- a/app/style/_fonts.scss
+++ b/app/style/_fonts.scss
@@ -110,6 +110,7 @@ $font-assets-path: "/.assets/font";
 
 .sg-icon {
 	vertical-align: middle;
+	line-height: 0;
 }
 
 .sg-icon-private:before {
